--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
-    "@arcana/auth": "1.0.8",
-    "@arcana/auth-react": "0.0.3"
+    "@arcana/auth": "1.0.9-beta.1",
+    "@arcana/auth-react": "0.0.4-beta.1"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
+    "@babel/plugin-proposal-private-property-in-object": "^7.11.0",
     "typescript": "4.1.3"
   },
   "scripts": {
